# booksapi-mcp

./: README.md  pyproject.toml
requests/: delete.http  get.http  post.http  put.http
src/: api.py  db.py
